# haskell-workshop

./: .gitignore  README.md
code/: LICENSE  Workshop.cabal
code/bench/: Main.hs
code/src/Tutorial/: Shift.hs
code/tests/: Properties.hs
handouts/: cookbook.md  resources.md  syntax.md
